WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31980
REGRESSION (
r49757
): masking-mask-01-b.svg rendered incorrectly
https://bugs.webkit.org/show_bug.cgi?id=31980
Summary
REGRESSION (r49757): masking-mask-01-b.svg rendered incorrectly
Yuta Kitamura
Reported
2009-11-30 03:12:35 PST
Created
attachment 44014
[details]
Expected and current rendering LayoutTests/svg/W3C-SVG-1.1/masking-mask-01-b.svg This test has been failing since
r49757
. SVG masks are not working correctly.
Attachments
Expected and current rendering
(32.17 KB, image/png)
2009-11-30 03:12 PST
,
Yuta Kitamura
no flags
Details
Test case for SVG mask
(1.27 KB, image/svg+xml)
2009-11-30 05:07 PST
,
Dirk Schulze
no flags
Details
fix of SVG Mask
(23.18 KB, patch)
2009-11-30 08:49 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuta Kitamura
Comment 1
2009-11-30 03:14:13 PST
Dirk, do you have any idea on this?
Dirk Schulze
Comment 2
2009-11-30 03:33:44 PST
I can reproduce this in trunk. I'm currently building
r49757
. If this comes with this commit, we still have a bug in the calculation of the mask region. I'll take a look at it.
Dirk Schulze
Comment 3
2009-11-30 05:07:34 PST
Created
attachment 44016
[details]
Test case for SVG mask It looks like the combination of maskUnits="userSpaceOnUse" with maskContentUnits="userSpaceOnUse" on a mask element doesn't work atm.
Dirk Schulze
Comment 4
2009-11-30 08:49:19 PST
Created
attachment 44022
[details]
fix of SVG Mask This should fix SVG Mask for sure this time (hopefully ;-)). I added a more complex test of all combinations of maskUnits and maskContentUnits. LayoutTests/svg/W3C-SVG-1.1/masking-mask-01-b.svg works again now.
Nikolas Zimmermann
Comment 5
2009-11-30 09:16:10 PST
Comment on
attachment 44022
[details]
fix of SVG Mask LGTM. r=me.
WebKit Commit Bot
Comment 6
2009-11-30 09:25:07 PST
Comment on
attachment 44022
[details]
fix of SVG Mask Clearing flags on attachment: 44022 Committed
r51496
: <
http://trac.webkit.org/changeset/51496
>
WebKit Commit Bot
Comment 7
2009-11-30 09:25:12 PST
All reviewed patches have been landed. Closing bug.
Yuta Kitamura
Comment 8
2009-11-30 18:03:12 PST
Confirmed. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug